<resources>
    <string name="title_main">Univents</string>
    <string name="title_sub2">Concerts · Sports · Cultural · Gaming · Technical</string>
    <string name="signupStatement">New User?</string>
    <string name="signupStatement1">SIGN UP</string>
    <string name="loginStatement">Already Registered?</string>
    <string name="loginStatement1">LOGIN</string>
    <string name="title_sub">One app for all college events</string>
    <string name="Username">Email</string>
    <string name="Password">Password</string>
    <string name="fogotPwLink">Forgot Password</string>
    <string name="app_name">Univents</string>
    <string name="organiser_login">Organiser Login</string>
    <string name="Name">Name</string>
    <string name="reset_password">Reset Password</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="paytm">PAYTM</string>
    <string name="upi">UPI</string>
    <string name="event_added_successfully">Event Added Successfully</string>
    <string name="sign_up_successful">Sign Up Successful</string>
    <string name="idk">IDK</string>
    <string name="channel_description">CHANNEL DESC</string>
    <string name="servicedesc">This service is used to send a notification to you two hours prior to your booked event start.</string>
</resources>


