<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeScreen"
    android:background="@drawable/bggradient">
    <TextView
        android:id="@+id/title_main"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:padding="10dp"
        android:text="@string/title_main"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:id="@+id/title_sub2"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/title_sub2"
        android:textStyle="bold"
        android:padding="15dp"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:layout_marginTop="80dp"
        />

    <TextView
        android:id="@+id/signupStatement"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/signupStatement"
        android:padding="10sp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_marginTop="160dp"
        android:textColor="@color/white"
        />

    <Button
        android:id="@+id/SignupButton"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="225dp"
        android:background="@drawable/button1"
        android:text="@string/signupStatement1"
        android:textStyle="normal"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:onClick="SignUp"
        android:textAlignment="center"
        android:padding="5sp"
        android:elevation="50dp"
        />

    <TextView
        android:id="@+id/loginStatement"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/loginStatement"
        android:padding="10sp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_marginTop="320dp"
        android:textColor="@color/white"
        />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="375dp"
        android:background="@drawable/button1"
        android:text="@string/loginStatement1"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:onClick="Login"
        android:padding="5sp"
        />

    <TextView
        android:id="@+id/title_sub"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/title_sub"
        android:padding="15sp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_marginBottom="15dp"
        android:layout_alignParentBottom="true"
        android:textColor="@color/white"
        />

    <TextView
        android:id="@+id/orglog"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/organiser_login"
        android:padding="10sp"
        android:gravity="center"
        android:textSize="24sp"
        android:layout_marginTop="430dp"
        android:textColor="@android:color/white"
        android:clickable="true"
        android:focusable="true"
        android:onClick="orgLogin"
        />
</RelativeLayout>

