<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserSignup"
    android:orientation="vertical"
    android:background="@drawable/bggradient"
    >

    <TextView
        android:id="@+id/title_main"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:padding="10dp"
        android:text="@string/title_main"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:id="@+id/title_sub2"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/title_sub2"
        android:textStyle="bold"
        android:padding="15dp"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:layout_marginTop="80dp"
        />

    <EditText
        android:id="@+id/InputName"
        android:layout_width="300dp"
        android:layout_height="50sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="270dp"
        android:backgroundTint="@color/white"
        android:hint="@string/Name"
        android:inputType="text"
        android:padding="10sp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/InputUseremail"
        android:layout_width="300dp"
        android:layout_height="50sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="330dp"
        android:backgroundTint="@color/white"
        android:hint="@string/Username"
        android:inputType="text"
        android:padding="10sp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="25sp" />


    <EditText
        android:id="@+id/InputPassword"
        android:layout_width="300dp"
        android:layout_height="50sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="390dp"
        android:backgroundTint="@color/white"
        android:textColorHint="@color/white"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:padding="10sp"
        android:textSize="25sp" />


    <Button
        android:id="@+id/signupButton1"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="485dp"
        android:background="@drawable/button1"
        android:text="@string/signupStatement1"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:onClick="SignupCheck"
        android:padding="5sp"
        android:textAlignment="center"
        />

    <!--<TextView-->
    <!--android:id="@+id/title_sub"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="55dp"-->
    <!--android:text="@string/title_sub"-->
    <!--android:textStyle="bold"-->
    <!--android:padding="15sp"-->
    <!--android:textAlignment="center"-->
    <!--android:textSize="20sp"-->
    <!--android:layout_marginBottom="15dp"-->
    <!--android:layout_alignParentBottom="true"-->
    <!--/>-->


</RelativeLayout>


